# todo_with_views

./: .env  Cargo.toml  docker-compose.yml  state.json
components/: header.html
css/: base.css  main.css
javascript/: main.js
migrations/2022-10-26-112831_create_to_do_items/: down.sql  up.sql
src/: main.rs  state.rs
src/json_serialization/: to_do_items.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
templates/: main.html
