[package]
name = "managing_views"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "2"
actix-service = "1.0.6"
actix-rt = "1.0"
futures = "0.3.5"
serde = "1"
serde_json = { version = "1.0", default-feature = false, features = ["alloc"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
